# salsaa

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build-triton.sh  build.rs
benches/: bench.rs
est/: est.ipynb  primes.ipynb
experiments/: results.md
klno25-baseline/: estimates.ipynb
src/: arithmetic.rs  cyclotomic_ring.rs  helpers.rs  lib.rs  main.rs  protocol.rs  quadratic_extension.rs
src/hexl/: bindings.rs
src/subroutines/: crs.rs  decomp.rs  fast_norm_check.rs  fold.rs  mod.rs  project.rs  split.rs
